welcome.lessons.welcome.bat.bool1.Close10.scala.error
close10:7: error: type mismatch;
 found   : Unit
 required: Int
		 	rep = a
                            ^close10:9: error: type mismatch;
 found   : Unit
 required: Int
		 } else rep = b
                            ^close10:5: error: type mismatch;
 found   : Unit
 required: Int
	if (!(math.abs(i1) == math.abs(i2))) {
        ^